docs(kinetic.ipynb): completed tutorial

--- a/docs/source/tutorial/kinetic.ipynb
+++ b/docs/source/tutorial/kinetic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Kinetic class is responsible for calculating reaction rates and reaction enthalpies in solving the reactor equations. We will use an example to demonstrate how it functions. We start defining two kinetic constants and the reactor volume."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Problem data\n",
-    "fa_in = 5 / 3600  # mol/s\n",
-    "f_volumetric = 10 * 0.001 / 60  # m3/s\n",
-    "\n",
+    "# Problem data:\n",
     "k1 = 0.05 / 3600 / 0.001  # mol/s/m3\n",
     "k2 = 0.15 / 3600 / 0.001  # mol/s/m3\n",
     "\n",
@@ -28,13 +33,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rate laws are defined as functions:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def r_rate1(c, t, cons):\n",
     "    return np.full(np.size(t), cons[\"k1\"])\n",
+    "\n",
     "\n",
     "def r_rate2(c, t, cons):\n",
     "    return np.full(np.size(t), cons[\"k2\"])"
@@ -45,12 +59,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create some substances first:"
+    "Substance objects are created first:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +79,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After that, the mixture of the substances is created:"
+    "After that, the mixture of the substances is instantiated. In this case, we create an IdealSolution object:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,24 +96,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the kinetic object is instantiated. The required parameters include the mixture object and a dictionary that contains the reactions in the following format:\n",
-    "\n",
-    "reactions={\"reaction_1\": {**\"eq\"**: a > b, **\"rate\"**: r_rate1}, \n",
-    "           \"reaction_2\":{**\"eq\"**: x > y, **\"rate\"**: r_rate2}...}\n",
-    "\n",
-    "The keywords **\"eq\"** (for equation) and **\"rate\"** (for reaction rate) are required.\n",
-    "The keyword **\"DH\"** is used for the enthalpy of reaction and is optional. However,\n",
-    "if the enthalpy is set for one reaction, it must be specified for all reactions,\n",
-    "otherwise an error will occur.\n",
-    "\n",
-    "\n",
-    "On the other hand, the dictionary kinetic_constants contains the rate constants\n",
-    "for the reactions. The keywords for the rate constants can be chosen freely."
+    "Next, the kinetic object is instantiated:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +121,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The required parameters include the mixture object and a dictionary that contains the reactions in the following format:\n",
+    "\n",
+    "reactions={\"reaction_1\": {**\"eq\"**: a > b, **\"rate\"**: r_rate1}, \n",
+    "           \"reaction_2\":{**\"eq\"**: x > y, **\"rate\"**: r_rate2}...}\n",
+    "\n",
+    "The keywords **\"eq\"** (for equation) and **\"rate\"** (for reaction rate) are required.\n",
+    "The keyword **\"DH\"** is used for the enthalpy of reaction and is optional. However,\n",
+    "if the enthalpy is set for one reaction, it must be specified for all reactions,\n",
+    "otherwise an error will occur.\n",
+    "\n",
+    "\n",
+    "On the other hand, the dictionary kinetic_constants contains the rate constants\n",
+    "for the reactions. The keywords for the rate constants can be freely chosen.\n",
+    "\n",
+    "Finally, the 'rates_argument' parameter can be set as 'concentration' or 'partial pressure', although the default value is 'concentration'. This parameter allows us to specify whether the rate laws are expressed in terms of concentrations or partial pressures."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The format \"aA + bB > cC + dD\" enables us to visually represent reactions in an aesthetically pleasing LaTeX format. To accomplish this, we utilize the **irepr** property."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -169,13 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Diferent reactions in kinetic: 2\n",
       "Mixture's substances: \n",
       "  * meoh \n",
       "  * h2o2 \n",
@@ -190,7 +215,7 @@
     }
    ],
    "source": [
-    "len(kinetic)\n",
+    "print(f\"Diferent reactions in kinetic: {len(kinetic)}\")\n",
     "print(kinetic.__repr__())"
    ]
   },
@@ -204,22 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([-5000,  2000])"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The reaction enthalpies are: [-5000  2000]\n"
+     ]
     }
    ],
    "source": [
-    "kinetic.user_r_dh"
+    "print(f\"The reaction enthalpies are: {kinetic.user_r_dh}\")"
    ]
   },
   {
@@ -232,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +264,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[84], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kinetic\u001b[39m.\u001b[39;49muser_r_dh \u001b[39m=\u001b[39m [\u001b[39m1000\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m500\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kinetic\u001b[39m.\u001b[39;49muser_r_dh \u001b[39m=\u001b[39m [\u001b[39m1000\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m500\u001b[39m]\n",
       "File \u001b[0;32m~/Escritorio/SoftwareDevelopment/ReactorD/reactord/kinetic/kinetic.py:64\u001b[0m, in \u001b[0;36mKinetic.user_r_dh\u001b[0;34m(self, new_dhs)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39m@user_r_dh\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[1;32m     63\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39muser_r_dh\u001b[39m(\u001b[39mself\u001b[39m, new_dhs: NDArray):\n\u001b[0;32m---> 64\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m     65\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUser reaction enthalpies are not mutable, instantiate a new \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     66\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mkinetic object.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     67\u001b[0m     )\n",
       "\u001b[0;31mValueError\u001b[0m: User reaction enthalpies are not mutable, instantiate a new kinetic object."
      ]
@@ -262,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -281,8 +303,10 @@
     "temperature = 300  # K\n",
     "pressure = 500_000  # Pa\n",
     "\n",
-    "print(f\" The individual reaction rates are: \\n\\\n",
-    "{kinetic.evaluate(mole_fractions, temperature, pressure)}\")\n"
+    "print(\n",
+    "    f\" The individual reaction rates are: \\n\\\n",
+    "{kinetic.evaluate(mole_fractions, temperature, pressure)}\"\n",
+    ")"
    ]
   },
   {
@@ -290,46 +314,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, the method 'dhs_evalute' calculate the enthalpies of each reaction"
+    "Likewise, the 'dhs_evaluate' method calculates the enthalpies of each reaction. These functions are primarily established through the 'set_dh_function()' method. They are particularly valuable in scenarios where the reactor temperature varies rather than remaining constant."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function dh_specified at 0x7f6d35323d00>\n"
+      "Enthalpy at 300 K and 500000 Pa: \n",
+      "[[-5000]\n",
+      " [ 2000]]\n"
      ]
     }
    ],
    "source": [
     "kinetic.set_dh_function()\n",
-    "print(kinetic._enthalpy_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-5000],\n",
-       "       [ 2000]])"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kinetic.dhs_evaluate(temperature, pressure)"
+    "print(\n",
+    "    f\"Enthalpy at {temperature} K and {pressure} Pa: \\n{kinetic.dhs_evaluate(temperature, pressure)}\"\n",
+    ")"
    ]
   }
  ],
