--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -275,11 +275,13 @@
     "For convenience an alternative Substance constructor is provided:\n",
     "\n",
     "```python\n",
-    "substance_object = rd.Substance.from_thermo_database(identification)\n",
+    "substance_object = rd.Substance.from_thermo_database(name, identification)\n",
     "```\n",
     "\n",
-    "Where identification is a string that may be either the name or the CAS number \n",
-    "of the substance. This alternative method uses the Caleb's Thermo library:\n",
+    "Where **name** is a string chosen that will be assigned to the Substance object \n",
+    "and **identification** is a string that may be either the name or the CAS \n",
+    "number of the substance. \n",
+    "This alternative method uses the Caleb's Thermo library:\n",
     "\n",
     "Caleb Bell and Contributors (2016-2021). Thermo: Chemical properties component \n",
     "of Chemical Engineering Design Library (ChEDL) \n",
