--- a/docs/source/tutorial/kinetic.ipynb
+++ b/docs/source/tutorial/kinetic.ipynb
@@ -37,7 +37,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rate laws are defined as functions:"
+    "The rate laws are defined as functions:\n",
+    "\n",
+    "for examele if we want to define the kinetic\n",
+    "$$\n",
+    "A \\rightarrow B\n",
+    "$$\n",
+    "\n",
+    "with reaction rate of order one"
    ]
   },
   {
@@ -101,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +116,7 @@
     "    mix=mix,\n",
     "    reactions={\n",
     "        \"r1\": {\"eq\": b > d, \"rate\": r_rate1, \"DH\": -5000},\n",
-    "        \"r2\": {\"eq\": a + b > (c + 2 * d), \"rate\": r_rate2, \"DH\": 2000},\n",
+    "        \"r2\": {\"eq\": a + b > c + 2 * d, \"rate\": r_rate2, \"DH\": 2000},\n",
     "    },\n",
     "    kinetic_constants={\"k1\": k1, \"k2\": k2},\n",
     "    rates_argument=\"concentration\",\n",
@@ -123,8 +130,12 @@
    "source": [
     "The required parameters include the mixture object and a dictionary that contains the reactions in the following format:\n",
     "\n",
-    "reactions={\"reaction_1\": {**\"eq\"**: a > b, **\"rate\"**: r_rate1}, \n",
-    "           \"reaction_2\":{**\"eq\"**: x > y, **\"rate\"**: r_rate2}...}\n",
+    "```python\n",
+    "reactions={\"reaction_1\": {\"eq\": a > b, \"rate\": r_rate1}, \n",
+    "           \"reaction_2\":{\"eq\": x > y, \"rate\": r_rate2}, \n",
+    "           ...\n",
+    "}\n",
+    "```\n",
     "\n",
     "The keywords **\"eq\"** (for equation) and **\"rate\"** (for reaction rate) are required.\n",
     "The keyword **\"DH\"** is used for the enthalpy of reaction and is optional. However,\n",
@@ -265,7 +276,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kinetic\u001b[39m.\u001b[39;49muser_r_dh \u001b[39m=\u001b[39m [\u001b[39m1000\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m500\u001b[39m]\n",
-      "File \u001b[0;32m~/Escritorio/SoftwareDevelopment/ReactorD/reactord/kinetic/kinetic.py:64\u001b[0m, in \u001b[0;36mKinetic.user_r_dh\u001b[0;34m(self, new_dhs)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39m@user_r_dh\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[1;32m     63\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39muser_r_dh\u001b[39m(\u001b[39mself\u001b[39m, new_dhs: NDArray):\n\u001b[0;32m---> 64\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m     65\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUser reaction enthalpies are not mutable, instantiate a new \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     66\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mkinetic object.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     67\u001b[0m     )\n",
+      "File \u001b[0;32m/mnt/c/Users/Usuario/Desktop/ReactorD/reactord/kinetic/kinetic.py:64\u001b[0m, in \u001b[0;36mKinetic.user_r_dh\u001b[0;34m(self, new_dhs)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39m@user_r_dh\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[1;32m     63\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39muser_r_dh\u001b[39m(\u001b[39mself\u001b[39m, new_dhs: NDArray):\n\u001b[0;32m---> 64\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m     65\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUser reaction enthalpies are not mutable, instantiate a new \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     66\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mkinetic object.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     67\u001b[0m     )\n",
       "\u001b[0;31mValueError\u001b[0m: User reaction enthalpies are not mutable, instantiate a new kinetic object."
      ]
     }
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
