--- a/docs/source/tutorial/stationary_pfr.ipynb
+++ b/docs/source/tutorial/stationary_pfr.ipynb
@@ -241,7 +241,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each reactor, different mass, energy and pressure balances can be chosen.\n",
+    "For each reactor, different mass, energy and pressure balances can be chosen.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A reactor may be operated in terms of its catalyst operation, thermal operation, \n",
+    "and pressure operation.\n",
+    "\n",
+    "\n",
+    "| Catalyst operation | Thermal opration | Pressure operation |\n",
+    "|--------------------|------------------|--------------------|\n",
+    "| Homogeneous        | Isothermal       | Isobaric           |\n",
+    "| Heterogeneous      | Adiabatic        | Non-isobaric       |\n",
+    "|                    | Non-isothermal   |                    |\n",
+    "\n",
+    "\n",
+    "\n",
+    "For the piston flow reactor, the list of implemented operations is:\n",
+    "\n",
+    "- Homogeneous  \n",
+    "    - Isothermal  \n",
+    "        - Isobaric\n",
+    "        - Non-isobaric  \n",
+    "    - Adiabatic  \n",
+    "        - Isobaric  \n",
+    "        - Non-isobaric  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "__Mass Balance Set__"
    ]
