docs(kinetic-y-ideal_gas-notebooks): mejoras

--- a/docs/source/tutorial/ideal_gas.ipynb
+++ b/docs/source/tutorial/ideal_gas.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mixture objects\n",
+    "\n",
+    "Mixture of ideal gases"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,8 +26,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mixture objects\n",
-    "\n",
     "To generate a mixture, first it is necessary to create the Substance objects that will be in the mixture. For instance:"
    ]
   },
@@ -82,7 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the number of moles of each substance in the mixture, molar fractions can be calculated. Furthermore, in order to determine the concentrations (**mol/m³**), temperature (**K**) and pressure (**Pa**) are necessary:"
+    "The molar fractions can be calculated by using the number of moles of each substance in the mixture. \n",
+    "Moreover, molar fractions, along with temperature (in **K**) and pressure (in **Pa**), are utilized to determine the concentrations (in **mol/m³**)."
    ]
   },
   {
@@ -95,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "molar fractions:  [0.2143 0.2857 0.0714 0.4286] True\n",
-      "Concentrations (mol/m³):  [ 61.31  81.75  20.44 122.62]\n"
+      "Concentrations (mol/m³):  [ 8.76 11.68  2.92 17.52]\n"
      ]
     }
    ],
@@ -108,7 +117,7 @@
     "temperature = 298.15  # K\n",
     "pressure = 101325  # Pa\n",
     "concentrations = np.round(\n",
-    "    gas_mixture.concentrations(moles, temperature, pressure), 2\n",
+    "    gas_mixture.concentrations(molar_fractions, temperature, pressure), 2\n",
     ")\n",
     "print(\"Concentrations (mol/m³): \", concentrations)"
    ]
@@ -135,8 +144,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Molar volume of the mixture:  0.0 m³/mol\n",
-      "Heat capacity:  38.4  J/K\n",
+      "Molar volume of the mixture:  0.0224 m³/mol\n",
+      "Heat capacity:  36.5  J/K\n",
       "Formation enthalpies:  [-296800.       0. -395700. -393474.]  J/(mol.K)\n",
       "Enthalpy correction:  [4273.3 3025.5 5561.8 4004.7]  J/(mol.K)\n",
       "Corrected enthalpies:  [-292526.7    3025.5 -390138.2 -389469.3]  J/(mol.K)\n"
@@ -144,18 +153,20 @@
     }
    ],
    "source": [
-    "moles = [0.5, 0.2, 0.1, 0.2]\n",
     "temperature = 298.15  # K\n",
     "pressure = 101325  # Pa\n",
     "\n",
     "print(\n",
     "    \"Molar volume of the mixture: \",\n",
-    "    np.round(gas_mixture.volume(moles, 273, pressure), 1),\n",
+    "    np.round(gas_mixture.volume(molar_fractions, 273, pressure), 5),\n",
     "    \"m³/mol\",\n",
     ")\n",
     "print(\n",
     "    \"Heat capacity: \",\n",
-    "    np.round(gas_mixture.mix_heat_capacity(moles, temperature, pressure), 1),\n",
+    "    np.round(\n",
+    "        gas_mixture.mix_heat_capacity(molar_fractions, temperature, pressure),\n",
+    "        1,\n",
+    "    ),\n",
     "    \" J/K\",\n",
     ")\n",
     "\n",
