--- a/docs/source/tutorial/kinetic.ipynb
+++ b/docs/source/tutorial/kinetic.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kinetic\n",
+    "The Kinetic class is responsible for calculating reaction rates and reaction enthalpies when solving the reactor equations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Kinetic class is responsible for calculating reaction rates and reaction enthalpies in solving the reactor equations. We will use an example to demonstrate how it functions. We start defining two kinetic constants and the reactor volume."
+    "We will use an example to illustrate its functionality. First, we will define two rate constants and the volume of the reactor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,28 +46,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rate laws are defined as functions:\n",
+    "#### Reaction rate\n",
     "\n",
-    "for examele if we want to define the kinetic\n",
-    "$$\n",
-    "A \\rightarrow B\n",
-    "$$\n",
+    "Next, we set the reaction rates, which are defined by python function with the format:\n",
     "\n",
-    "with reaction rate of order one"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def r_rate1(c, t, cons):\n",
-    "    return np.full(np.size(t), cons[\"k1\"])\n",
+    "```python\n",
+    "def reaction_rate(\n",
+    "    composition: CompositionalArgument, \n",
+    "    temperature: float, \n",
+    "    kinetics_constants: dict\n",
+    ") -> float:\n",
+    "    # calculation of the reaction rate \n",
+    "    return evaluated_reaction_rate\n",
+    "```\n",
     "\n",
+    "Composition is the compositional argument of the reaction_rate. The available\n",
+    "compositional arguments in ReactorD are:  \n",
     "\n",
-    "def r_rate2(c, t, cons):\n",
-    "    return np.full(np.size(t), cons[\"k2\"])"
+    "- Concentration $[\\frac {mol} {m^3}]$  \n",
+    "- Partial pressure [Pa]\n",
+    "\n",
+    "The desired compositional argument is selected in the reactor's definition with\n",
+    "the argument \"rates_argument\". \n",
+    "\n",
+    "If Concentrationtion is selected as the compositional argument, ReactorD will \n",
+    "evaluate the ```reaction_rate``` in the concentrations of all the mixture's\n",
+    "substances and the temperature. "
    ]
   },
   {
@@ -66,12 +79,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Substance objects are created first:"
+    "The rate laws are defined as functions. for example, given the hypothetical (and unbalanced) reactions:\n",
+    "$$\n",
+    "H_2O_2 \\rightarrow H_2O \n",
+    "$$\n",
+    "$$\n",
+    "H_2O_2 + C_2H_5OH \\rightarrow C_2H_4O + 2  H_2O\n",
+    "$$\n",
+    "\n",
+    "where the first reaction is first-order with respect to $H_2O_2$. The second reaction is also first-order with respect to $H_2O_2$ and $C_2H_5OH$. The rate laws for the reactions are defined as follows (in this case, they are defined as not dependent on temperature):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def r_rate1(concentrations, temperature, cons):\n",
+    "    return np.full(np.size(temperature), cons[\"k1\"] * concentrations[\"h2o2\"])\n",
+    "\n",
+    "\n",
+    "def r_rate2(concentrations, temperature, cons):\n",
+    "    return np.full(\n",
+    "        np.size(temperature),\n",
+    "        cons[\"k2\"] * concentrations[\"h2o2\"] * concentrations[\"meoh\"],\n",
+    "    )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In these functions, the variable 'c' represents a dictionary that holds the concentrations of the different compounds involved. The variable 'cons' is a dictionary that contains the rate constants for each reaction."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Substance objects are instantiated:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, the kinetic object is instantiated:"
+    "Next, the kinetic object is created:"
    ]
   },
   {
@@ -159,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -260,29 +314,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, once the enthalpies are set, they cannot be modified. The following statement will raise a value error:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "User reaction enthalpies are not mutable, instantiate a new kinetic object.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kinetic\u001b[39m.\u001b[39;49muser_r_dh \u001b[39m=\u001b[39m [\u001b[39m1000\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m500\u001b[39m]\n",
-      "File \u001b[0;32m/mnt/c/Users/Usuario/Desktop/ReactorD/reactord/kinetic/kinetic.py:64\u001b[0m, in \u001b[0;36mKinetic.user_r_dh\u001b[0;34m(self, new_dhs)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39m@user_r_dh\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[1;32m     63\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39muser_r_dh\u001b[39m(\u001b[39mself\u001b[39m, new_dhs: NDArray):\n\u001b[0;32m---> 64\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m     65\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUser reaction enthalpies are not mutable, instantiate a new \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     66\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mkinetic object.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     67\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: User reaction enthalpies are not mutable, instantiate a new kinetic object."
-     ]
-    }
-   ],
-   "source": [
-    "kinetic.user_r_dh = [1000, -500]"
+    "However, once the enthalpies are set, they cannot be modified. The following assignation attempt will raise a value error:\n",
+    "\n",
+    "```python\n",
+    "kinetic.user_r_dh = [1000, -500]\n",
+    "```\n"
    ]
   },
   {
@@ -295,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -303,8 +339,8 @@
      "output_type": "stream",
      "text": [
       " The individual reaction rates are: \n",
-      "[[0.01388889]\n",
-      " [0.04166667]]\n"
+      "[[1.82542826e+02]\n",
+      " [2.87901073e+06]]\n"
      ]
     }
    ],
@@ -330,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
