--- a/docs/source/tutorial/kinetic.ipynb
+++ b/docs/source/tutorial/kinetic.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In these functions, the variable 'c' represents a dictionary that holds the concentrations of the different compounds involved. The variable 'cons' is a dictionary that contains the rate constants for each reaction."
+    "In these functions, the variable 'c' represents a dictionary that holds the concentrations of the different compounds involved. The variable 'cons' is a dictionary that contains the rate constants for each reaction. This dictionary could contain Arrhenius constant as fallow to value the reaction rate in different temperatures.\n",
+    "```python\n",
+    "def reaction_rate1(composition, temperature, constants):\n",
+    "    Arr, e= constants[\"Arrhenius\"], constants[\"activation energy\"]\n",
+    "\n",
+    "    rate = Arr* np.exp(e / R * (1 / temperature))*composition[\"A\"]*composition[\"B\"]\n",
+    "\n",
+    "    return np.full(np.size(temperature), rate)\n",
+    "```"
    ]
   },
   {
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,12 +261,12 @@
     "The dunder method __len__ has been overriden to provide the number of reactions\n",
     "in the class Kinetic.\n",
     "\n",
-    "Furthermore, the dunder method __repr__ return the subtances contained in the mixture."
+    "Furthermore, the dunder method __repr__ return the subtances contained in the mixture and reactions to use in a LaTex format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +289,7 @@
    ],
    "source": [
     "print(f\"Diferent reactions in kinetic: {len(kinetic)}\")\n",
-    "print(kinetic.__repr__())"
+    "print(repr(kinetic))"
    ]
   },
   {
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
