test fogler 12_2 pass

--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -42,36 +42,52 @@
     "def cpa(t, p):\n",
     "    return np.full(len(t), 163)\n",
     "\n",
+    "\n",
     "def cpb(t, p):\n",
     "    return np.full(len(t), 83)\n",
     "\n",
-    "def cpc(t,p):\n",
+    "\n",
+    "def cpc(t, p):\n",
     "    return np.full(len(t), 71)\n",
+    "\n",
     "\n",
     "def int_cpa(t1, t2, p):\n",
     "    return 163 * (t2 - t1)\n",
     "\n",
+    "\n",
     "def int_cpb(t1, t2, p):\n",
     "    return 83 * (t2 - t1)\n",
+    "\n",
     "\n",
     "def int_cpc(t1, t2, p):\n",
     "    return 71 * (t2 - t1)\n",
     "\n",
+    "\n",
     "def r_rate(c, t, cons):\n",
-    "    k = 8.2e14 * np.exp(- 34222 / t) # 1/s\n",
-    "    \n",
+    "    k = 8.2e14 * np.exp(-34222 / t)  # 1/s\n",
+    "\n",
     "    return k * c[\"acetone\"]\n",
     "\n",
+    "\n",
     "a = rd.Substance(\n",
-    "    \"acetone\", formation_enthalpy_ig=-216.67*1000, heat_capacity_gas=cpa, heat_capacity_gas_dt_integral=int_cpa\n",
+    "    \"acetone\",\n",
+    "    formation_enthalpy_ig=-216.67 * 1000,\n",
+    "    heat_capacity_gas=cpa,\n",
+    "    heat_capacity_gas_dt_integral=int_cpa,\n",
     ")\n",
     "\n",
     "b = rd.Substance(\n",
-    "    \"anhydride\", formation_enthalpy_ig=-61.09*1000, heat_capacity_gas=cpb, heat_capacity_gas_dt_integral=int_cpb\n",
+    "    \"anhydride\",\n",
+    "    formation_enthalpy_ig=-61.09 * 1000,\n",
+    "    heat_capacity_gas=cpb,\n",
+    "    heat_capacity_gas_dt_integral=int_cpb,\n",
     ")\n",
     "\n",
     "c = rd.Substance(\n",
-    "    \"methane\", formation_enthalpy_ig=-74.81*1000, heat_capacity_gas=cpc, heat_capacity_gas_dt_integral=int_cpc\n",
+    "    \"methane\",\n",
+    "    formation_enthalpy_ig=-74.81 * 1000,\n",
+    "    heat_capacity_gas=cpc,\n",
+    "    heat_capacity_gas_dt_integral=int_cpc,\n",
     ")\n",
     "\n",
     "mix = rd.mix.IdealGas([a, b, c])\n",
@@ -89,11 +105,11 @@
     "eb = pfr.energy_balances.NoIsothermicAllConstant(\n",
     "    temperature_in_or_out={\"in\": 1035},\n",
     "    refrigerant_in_temperature=1250,\n",
-    "    heat_exchange_coefficient=110\n",
+    "    heat_exchange_coefficient=110,\n",
     ")\n",
     "pb = pfr.pressure_balances.Isobaric(162 * 1000)\n",
     "\n",
-    "area = np.pi * (2.54 / 100)**2 / 4\n",
+    "area = np.pi * (2.54 / 100) ** 2 / 4\n",
     "\n",
     "reactor = pfr.PFR(\n",
     "    kinetic=kinetic,\n",
@@ -108,11 +124,101 @@
     "reactor.simulate(1e-8, bc_tol=1e-5, max_nodes=10_000)\n",
     "\n",
     "# Fogler data\n",
-    "t_z = np.array([0.0159,\t0.0398,\t0.0677,\t0.0956,\t0.1275,\t0.1753,\t0.2191,\t0.259,\t0.3028,\t0.3506,\t0.3904,\t0.4382,\t0.4821,\t0.5498,\t0.6215,\t0.6773,\t0.749,\t0.8287,\t0.8924,\t0.9522,\t0.996]) / 1000 / area\n",
-    "t = np.array([1033.93,\t1030.44,\t1030.44,\t1031.31,\t1032.62,\t1035.24,\t1037.86,\t1040.49,\t1043.54,\t1047.04,\t1050.10,\t1053.59,\t1057.09,\t1062.33,\t1068.45,\t1073.25,\t1080.24,\t1088.98,\t1097.28,\t1106.46,\t1113.88])\n",
+    "t_z = (\n",
+    "    np.array(\n",
+    "        [\n",
+    "            0.0159,\n",
+    "            0.0398,\n",
+    "            0.0677,\n",
+    "            0.0956,\n",
+    "            0.1275,\n",
+    "            0.1753,\n",
+    "            0.2191,\n",
+    "            0.259,\n",
+    "            0.3028,\n",
+    "            0.3506,\n",
+    "            0.3904,\n",
+    "            0.4382,\n",
+    "            0.4821,\n",
+    "            0.5498,\n",
+    "            0.6215,\n",
+    "            0.6773,\n",
+    "            0.749,\n",
+    "            0.8287,\n",
+    "            0.8924,\n",
+    "            0.9522,\n",
+    "            0.996,\n",
+    "        ]\n",
+    "    )\n",
+    "    / 1000\n",
+    "    / area\n",
+    ")\n",
+    "t = np.array(\n",
+    "    [\n",
+    "        1033.93,\n",
+    "        1030.44,\n",
+    "        1030.44,\n",
+    "        1031.31,\n",
+    "        1032.62,\n",
+    "        1035.24,\n",
+    "        1037.86,\n",
+    "        1040.49,\n",
+    "        1043.54,\n",
+    "        1047.04,\n",
+    "        1050.10,\n",
+    "        1053.59,\n",
+    "        1057.09,\n",
+    "        1062.33,\n",
+    "        1068.45,\n",
+    "        1073.25,\n",
+    "        1080.24,\n",
+    "        1088.98,\n",
+    "        1097.28,\n",
+    "        1106.46,\n",
+    "        1113.88,\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "x_z = np.array([0.0121,\t0.0684,\t0.1206,\t0.193,\t0.2814,\t0.3537,\t0.426,\t0.4983,\t0.5705,\t0.6428,\t0.719,\t0.8073,\t0.9036,\t0.9958]) / 1000 / area\n",
-    "x = np.array([0.0194,\t0.0922,\t0.1553,\t0.2427,\t0.3398,\t0.4223,\t0.4951,\t0.568,\t0.6311,\t0.6942,\t0.7524,\t0.8204,\t0.8883,\t0.9466])\n",
+    "x_z = (\n",
+    "    np.array(\n",
+    "        [\n",
+    "            0.0121,\n",
+    "            0.0684,\n",
+    "            0.1206,\n",
+    "            0.193,\n",
+    "            0.2814,\n",
+    "            0.3537,\n",
+    "            0.426,\n",
+    "            0.4983,\n",
+    "            0.5705,\n",
+    "            0.6428,\n",
+    "            0.719,\n",
+    "            0.8073,\n",
+    "            0.9036,\n",
+    "            0.9958,\n",
+    "        ]\n",
+    "    )\n",
+    "    / 1000\n",
+    "    / area\n",
+    ")\n",
+    "x = np.array(\n",
+    "    [\n",
+    "        0.0194,\n",
+    "        0.0922,\n",
+    "        0.1553,\n",
+    "        0.2427,\n",
+    "        0.3398,\n",
+    "        0.4223,\n",
+    "        0.4951,\n",
+    "        0.568,\n",
+    "        0.6311,\n",
+    "        0.6942,\n",
+    "        0.7524,\n",
+    "        0.8204,\n",
+    "        0.8883,\n",
+    "        0.9466,\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "rd_temps = reactor.ode_solution.sol(t_z)[-3]\n",
     "rd_facetone = reactor.ode_solution.sol(x_z)[0]\n",
@@ -185,7 +291,7 @@
    ],
    "source": [
     "reactor.sim_df.plot(\"z\", \"temperature\")\n",
-    "plt.xlim(0 , 1)"
+    "plt.xlim(0, 1)"
    ]
   },
   {
@@ -203,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(t,y):\n",
+    "def f(t, y):\n",
     "    return np.cos(y)"
    ]
   },
@@ -229,7 +335,7 @@
     }
    ],
    "source": [
-    "sol = solve_ivp(f, np.array([0, np.pi]), y0 = np.array([0]))"
+    "sol = solve_ivp(f, np.array([0, np.pi]), y0=np.array([0]))"
    ]
   },
   {
