feat(new-energy-balance-for-pfr): no isothermic energy balance for pfr with variation of teh refrigerant temperature along the reactor's length. Also test for that balance

--- a/docs/source/tutorial/kinetic.ipynb
+++ b/docs/source/tutorial/kinetic.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kinetic\n",
+    "## Kinetic objects\n",
     "The Kinetic class is responsible for calculating reaction rates and reaction enthalpies when solving the reactor equations."
    ]
   },
